chore: 의존성 업데이트
- 자바 21 → 25
- JDA 6.1.0 → 6.3.1
- JDave 의존성 추가